--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    text-align: center;
     width: 100vw;
     height: 100vh;
 }
